<resources>
    <string name="app_name">JogoDaMemoria</string>
    <string name="title_activity_tela_jogo">TelaJogoActivity</string>

    <string name="action_reiniciar">reiniciar</string>
    <string name="jogo_da_memoria">Jogo da Memoria</string>
    <string name="preferencias">Configuração</string>
    <string name="som_sumario">Deseeja usar ou não o som</string>
    <string name="som_titulo">Som</string>
    <string name="Preferencias">preferencias</string>
    <string name="nivel_sumario">Selecione um nivel</string>
    <string name="iniciar">Iniciar Jogo</string>
    <string name="tema_sumario">Selecione um tema para o jogo</string>

    <string-array name="niveis">
        <item>Fácil</item>
        <item>Médio</item>
        <item>Díficio</item>
    </string-array>
    <string-array name="opcoes">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="temas">
        <item>Frutas</item>
        <item>Game</item>
    </string-array>
    <string-array name="op_tema">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="title_activity_tela_teste">TelaTeste</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
