<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferencias">
        <ListPreference
            android:key="nivel"
            android:title="Nivel"
            android:summary="@string/nivel_sumario"
            android:entries="@array/niveis"
            android:defaultValue="true"
            android:entryValues="@array/opcoes"/>

        <ListPreference
            android:key="tema"
            android:title="Tema"
            android:summary="@string/tema_sumario"
            android:entries="@array/temas"
            android:defaultValue="true"
            android:entryValues="@array/op_tema"/>

        <SwitchPreference
            android:key="som"
            android:summary="@string/som_sumario"
            android:title="@string/som_titulo"
            android:defaultValue="true"/>

    </PreferenceCategory>

</PreferenceScreen>
